--- a/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,5 @@
 /* All styles for your header Components live here */
+
+.h1 {
+    border: 1px solid red;
+}
